# aoc-2022

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: readme-stars.yml
src/template/: aoc_cli.rs  mod.rs
src/template/commands/: scaffold.rs
