[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Willi Meierhof <16141053+Wilhelmsson177@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
color-eyre = "0.6.2"
itertools = "0.11.0"
pico-args = "0.5.0"
